Fixed overlapping weather panel & search bug

--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -8,6 +8,7 @@
     width: 40vw;
     margin-bottom: 5vh;
     padding: 2vh;
+    z-index: 5;
 }
 
 .search-result {
